tests/lime/fail/tokens/macro_rest/byte_92.wsa
macro m\ [push 92] m\
